@@ -1,0 +1,20 @@
+# openchange.conf - configuration file for zentyal-openchange
+#
+# Everything after a '#' character is ignored
+#
+# All whitespace is ignored
+#
+# Config keys are set this way:
+#
+# key = value
+#
+# They may contain comments at the end:
+#
+# key = value # this is ignored
+
+# -- broker settings for openchange --
+oc_broker_host = localhost
+oc_broker_port = 5642
+oc_broker_user = guest
+oc_broker_pass = guest
+oc_broker_vhost =
