@@ -1,4 +1,5 @@
 HEAD
+	+ Write broker configuration for mapiproxy server in openchange.conf
 	+ s4sync: Remove the group share if exists after deleting the group itself
 	+ s4sync: Remove the deleted user or group from shares ACLs
 	+ Grant rwx rights to Domain guest and Everybody on guest shares
